syntax = "proto3";

package api;

service Service {
	rpc Get (GetRequest) returns (GetResponse);
	rpc Put (PutRequest) returns (PutResponse);
	rpc Upload(stream FileUploadRequest) returns(FileUploadResponse);
	rpc Download(GetRequest) returns(stream FileDownloadResponse);
}

message PutRequest {
	string signature = 1;
	ApiEntry entry = 2;
}

message ApiChildren {
	string name = 1;
	string type = 2;
	optional string cid = 3;
}

message ApiEntry {
	string owner = 1;
	bool public = 2;
	repeated string read_users = 3;
	string name = 4;
	repeated ApiChildren children = 5;
}

message PutResponse {
	string key = 1;
}

message GetRequest {
	string location = 1;
	string name = 2;	
	bool download = 3;
}

message GetResponse {
	optional ApiEntry entry = 1;
}

message DownloadFile {
	bytes content = 1;
	string cid = 2;
	string name = 3;
}

message UploadFile {
	bytes content = 1;
	string cid = 2;
}

message FileUploadResponse {
	string key = 1;
}

message FileUploadRequest {
	oneof upload_request {
		PutRequest metadata = 1;
		UploadFile file = 2;
	}
}

message FileDownloadResponse {
	oneof download_response {
		GetResponse metadata = 1;
		DownloadFile file = 2;
	}
}